--- a/statistics.css
+++ b/statistics.css
@@ -209,7 +209,6 @@ section.first-main-section .own-title{
 	padding-top: 38px;
 }
 section.first-main-section .own-title .title-text{
-	font-family: 'Spectral SC', serif;
 	font-size: 32px;
 	text-align: center;
 }
@@ -224,7 +223,7 @@ section.first-main-section .main-content {
 	width: 100%;
 	padding-top: 95px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 }
 
@@ -340,10 +339,14 @@ section.first-main-section .main-content .informative-part .diagram-image img:ho
 }
 
 
+section.second-main-section > *, section.third-main-section > *{
+	margin: 0 60px;
+}
+
 section.second-main-section, section.third-main-section {
 	height: 550px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 }
 section.first-main-section .text-header, section.second-main-section .text-header, 
@@ -379,7 +382,7 @@ section.second-main-section .main-img img:hover{
 
 section.third-main-section .main-text{
 	padding-left: 18px;
-	width: 470px;
+	width: 358px;
 }
 
 section.third-main-section .main-img img{
